# customOCR

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
configs/: config.yaml
src/: train.py
src/configs/: crnn.yaml  data.yaml  train.yaml
src/customocr/: __init__.py  main.py  train.py
src/customocr/data/: __init__.py  charset.py  collate.py  data_loader.py  dataset.py  factory.py  generate_synthetic.py
src/customocr/models/: __init__.py  base_model.py  crnn.py  crnn_mobilenet_small.py  crnn_resnet.py  factory.py
src/customocr/utils/: __init__.py  config_parser.py  functions.py  metrics.py
src/data/: charset.py  collate.py  dataset.py  factory.py  generate_synthetic.py  generate_synthetic_dataset.py
src/models/: crnn.py  crnn_mobilenet_small.py  crnn_resnet.py  factory.py
src/utils/: config_parser.py  data_loader.py  functions.py
